# firefly

./: .gitignore  Makefile  README.md  firefly.desktop  firefly.py  firefly.windows.spec  mypy.ini  pyproject.toml  rex.json  settings.json  setup.cfg  skin.css  skin.scss
.github/workflows/: main.yml
firefly/: __init__.py  __main__.py  api.py  application.py  base_module.py  cellformat.py  common.py  config.py  enum.py  filesystem.py  listener.py  log.py  main_window.py  menu.py  objects.py  qt.py  settings.py  syntaxhl.py  user.py  version.py  view.py  widgets.py
firefly/components/: __init__.py  __main__.py  folder_dropdown.py  form.py  input_color.py  input_combo.py  input_datetime.py  input_integer.py  input_list.py  input_radio.py  input_select.py  input_switch.py  input_text.py  input_textarea.py  input_timecode.py
firefly/dialogs/: about.py  batch_ops.py  calendar.py  columns_select.py  event.py  login.py  rundown.py  send_to.py  site_select.py  split_item.py  subclips.py  text_editor.py
firefly/helpers/: scheduling.py
firefly/metadata/: __init__.py  format.py  normalize.py  utils.py
firefly/modules/: __init__.py  browser.py  browser_model.py  detail.py  detail_subclips.py  detail_toolbars.py  jobs.py  jobs_model.py  rundown.py  rundown_mcr.py  rundown_model.py  rundown_plugins.py  rundown_utils.py  rundown_view.py  scheduler.py  scheduler_model.py  scheduler_utils.py
firefly/modules/detail/: __init__.py  editor.py  preview.py  (+2 more)
firefly/objects/: __init__.py  asset.py  base.py  bin.py  event.py  format.py  item.py
firefly/proxyplayer/: __init__.py  mpv.py  qtplayer.py  utils.py  videoplayer.py
firefly/widgets/: __init__.py  combo.py  comboutils.py  simple.py
nx/: __init__.py  cellformat.py  common.py  connection.py  firefly_object.py  objects.py
proxyplayer/: __init__.py  mpv.py  utils.py  videoplayer.py
(+10 files in other folders)
