[tool.poetry]
name = "firefly"
version = "6.0.0"
description = "Desktop client application for Nebula - Open source media asset management and broadcast automation system."
authors = ["Martin Wacker <martas@imm.cz>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
websocket-client = "^1.3.1"
nxtools = "^1.6"
PySide6 = "^6.3.2"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
PyQtEnumConverter = "^1.0"
black = "^22.3.0"
flake8 = "^4.0.1"
qtsass = "^0.3.2"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
