[tool.poetry]
name = "firefly"
version = "6.0.0-beta.2"
description = "Desktop client application for Nebula - Open source media asset management and broadcast automation system."
authors = ["Nebula Broadcast <info@nebulabroadcast.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
websocket-client = "^1.3.1"
nxtools = "^1.6"
PySide6 = "^6.3.2"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
PyQtEnumConverter = "^1.0"
black = "^22.3.0"
flake8 = "^4.0.1"
qtsass = "^0.3.2"
mypy = "^1.0.0"
pyinstaller = "^5.8.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
